# rust_starter

./: .gitignore  Cargo.toml  Makefile.toml  README.md  book.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  env.sample
docs/: SUMMARY.md
src/: error.rs  lib.rs  main.rs  prelude.rs
src/utils/: direntry_froms.rs  mod.rs
tests/app/: helpers.rs
